...
        VStack {
            Image("fullFormLogo")
                .resizable()
                .scaledToFit()
                .frame(width: UIScreen.main.bounds.width * 0.5,
                       height: 200)
                .accessibilityIdentifier("logo")
            
            Text("CREATE A NEW ACCOUNT")
                .font(.custom("Aileron-Thin", size: 30))
            
            VStack {
                
...
                }
                .background(Color(.systemGray6))
//                .padding(.top, 24)
                .buttonStyle(.bordered)
                .disabled(!formIsValid)
                .opacity(formIsValid ? 1.0 : 0.5)
                .accessibilityIdentifier("sign up button")
            }
            .padding(.horizontal)
            .padding(.top, 15)
                
            Spacer()
            
...
